OMP utledning av refusjonskrav er nå pr arbeidsforhold i ulansert, enklere implementasjon